# Mandelbrot

./: .gitignore  CMakeLists.txt  Makefile  mandelbrot.c  mandelbrot.cu
